--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.0 || ^5.0"
+        "phpunit/phpunit": "^5.0"
     },
     "autoload": {
         "psr-4": {
