Excluding development files in Composer archive

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,6 @@
         }
     },
     "archive": {
-        "exclude": ["/tests"]
+        "exclude": ["/.*", "/phpunit.xml", "/tests"]
     }
 }
