Added support for adding timesheets

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,6 @@
         }
     },
     "archive": {
-        "exclude": ["/.*", "/phpunit.xml", "/tests"]
+        "exclude": ["/phpunit.xml", "/tests", "/.*"]
     }
 }
