--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -8,7 +8,7 @@ jobs:
 
         strategy:
             matrix:
-                php_version: ["5.6", "7.3", "7.4"]
+                php_version: ["7.3", "7.4"]
 
         steps:
             - uses: actions/checkout@v2
