--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -4,21 +4,25 @@ on: [push, pull_request]
 
 jobs:
     build-test:
-        runs-on: ubuntu-latest
+        runs-on: ${{ matrix.os }}
 
         strategy:
             matrix:
-                php_version: ["7.3", "7.4"]
+                os: [ubuntu-latest]
+                php_version: [5.6, 7.3, 7.4]
 
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
 
-            - uses: php-actions/composer@v6
+            - name: Setup PHP
+              uses: shivammathur/setup-php@v2
               with:
-                php_version: ${{ matrix.php_version }}
+                  php-version: ${{ matrix.php }}
+                  coverage: none
 
-            - name: PHPUnit Tests
-              uses: php-actions/phpunit@v2
-              with:
-                configuration: phpunit.xml
-                php_version: ${{ matrix.php_version }}
+            - name: Install dependencies
+              run: |
+                  composer install --prefer-stable --prefer-dist --no-interaction
+
+            - name: Execute tests
+              run: vendor/bin/phpunit
