--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -9,7 +9,7 @@ jobs:
         strategy:
             matrix:
                 os: [ubuntu-latest]
-                php_version: [5.6, 7.3, 7.4]
+                php: [5.6, 7.3, 7.4]
 
         steps:
             - uses: actions/checkout@v3
