--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -22,7 +22,7 @@ jobs:
 
             - name: Install dependencies
               run: |
-                  composer install --prefer-stable --prefer-dist --no-interaction
+                  composer install --prefer-dist --no-interaction
 
             - name: Execute tests
               run: vendor/bin/phpunit
