--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,18 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0"
+        "phpunit/phpunit": "^5.0 || ^10.5"
     },
     "autoload": {
         "psr-4": {
-            "CommunityDS\\Deputy\\Api\\": "src/",
-            "CommunityDS\\Deputy\\Api\\Tests\\": "tests/"
+            "CommunityDS\\Deputy\\Api\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "CommunityDS\\Deputy\\Api\\Tests\\": "tests/"
+        },
+        "files": ["tests/Bridge/autoload.php"]
     },
     "archive": {
         "exclude": ["/phpunit.xml", "/tests", "/.*"]
